@@ -87,14 +87,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  *) mod_headers: support global replace in Header Edit
-     PR 46594 (not 47066 as incorrectly recorded in change log)
-     trunk: http://svn.eu.apache.org/viewvc?view=revision&revision=894036
-            http://svn.apache.org/viewvc?view=revision&revision=966059
-     2.2.x: http://people.apache.org/~niq/patches/46594.patch
-                              (newly updated to fold in r966059)
-     +1: niq, rpluem, jim
-
    * Core: fix symlinks ownership tests
      PR 36783
      Trunk patch: http://svn.apache.org/viewvc?view=revision&revision=632947
